force-app/main/default/objects/Quote/fields/Show_Discount_Column__c.field-meta.xml
<CustomField>
    <fullName>Show_Discount_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Muestra la columna de descuento en las partidas del PDF.</description>
    <label>Mostrar Columna Descuento</label>
    <type>Checkbox</type>
</CustomField>