force-app/main/default/objects/Quote/fields/Show_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Show_Quantity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Oculta o muestra la columna de cantidad en el PDF</description>
    <label>Ver Cantidad</label>
    <type>Checkbox</type>
</CustomField>