force-app/main/default/objects/Quote/fields/Show_Subtotal_2__c.field-meta.xml
<CustomField>
    <fullName>Show_Subtotal_2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar Subtotal 2 en PDF</label>
    <type>Checkbox</type>
</CustomField>