force-app/main/default/objects/Quote/fields/Show_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>Show_TotalPrice__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Oculta o muestra la columna de importe en el PDF</description>
    <label>Ver Importe Total</label>
    <type>Checkbox</type>
</CustomField>