force-app/main/default/objects/Quote/fields/Show_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>Show_UnitPrice__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Oculta o muestra la columna de precio unitario en el PDF</description>
    <label>Ver Precio Unitario</label>
    <type>Checkbox</type>
</CustomField>